<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:title="@string/drawer_item_news" />
        <item
            android:id="@+id/nav_football"
            android:title="@string/drawer_item_footbal" />
        <!--android:icon="@drawable/ic_menu_gallery"-->

        <item
            android:id="@+id/nav_hockey"
            android:title="@string/drawer_item_hockey" />
        <!--android:icon="@drawable/ic_menu_slideshow"-->

        <item
            android:id="@+id/nav_volleyball"
            android:title="@string/drawer_item_volleyball" />
        <item
            android:id="@+id/nav_basketball"
            android:title="@string/drawer_item_basketball" />
    </group>

</menu>
